--- a/index.html
+++ b/index.html
@@ -43,76 +43,6 @@
             display: block;
         }
 
-        /* Fixed Social Media Bar - MOBILE OPTIMIZED */
-        .social-fixed {
-            position: fixed;
-            right: 0;
-            top: 50%;
-            transform: translateY(-50%);
-            z-index: 999;
-            background: var(--white);
-            box-shadow: var(--shadow-lg);
-            border-radius: 50px 0 0 50px;
-            padding: 0.8rem 0.4rem;
-            animation: slideInRight 0.8s ease-out;
-        }
-
-        .social-fixed a {
-            display: flex;
-            width: 45px;
-            height: 45px;
-            margin: 0.4rem 0;
-            border-radius: 50%;
-            align-items: center;
-            justify-content: center;
-            transition: all 0.3s;
-            font-size: 1.3rem;
-            color: var(--white);
-            position: relative;
-        }
-
-        .social-fixed a::before {
-            content: attr(data-label);
-            position: absolute;
-            right: 55px;
-            background: var(--dark);
-            color: var(--white);
-            padding: 0.4rem 0.8rem;
-            border-radius: 5px;
-            font-size: 0.7rem;
-            font-weight: 700;
-            white-space: nowrap;
-            opacity: 0;
-            pointer-events: none;
-            transition: all 0.3s;
-        }
-
-        .social-fixed a:hover::before {
-            opacity: 1;
-            right: 60px;
-        }
-
-        .social-fixed .whatsapp {
-            background: #25D366;
-        }
-
-        .social-fixed .instagram {
-            background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
-        }
-
-        .social-fixed .tiktok {
-            background: #000000;
-        }
-
-        .social-fixed .twitter {
-            background: #1DA1F2;
-        }
-
-        .social-fixed a:hover {
-            transform: scale(1.1);
-            box-shadow: 0 5px 20px rgba(0,0,0,0.4);
-        }
-
         /* Navigation - MOBILE OPTIMIZED */
         nav {
             position: fixed;
@@ -199,6 +129,52 @@
             background: var(--dark);
             transform: translateY(-2px);
             box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Social Media Icons in Navigation */
+        .nav-social {
+            display: flex;
+            gap: 0.8rem;
+            align-items: center;
+            margin-top: 0.5rem;
+            width: 100%;
+            justify-content: center;
+            padding: 0.5rem 0;
+            border-top: 1px solid var(--border);
+        }
+
+        .nav-social .social-icon {
+            width: 38px;
+            height: 38px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.2rem;
+            color: var(--white);
+            transition: all 0.3s;
+            text-decoration: none;
+        }
+
+        .nav-social .whatsapp {
+            background: #25D366;
+        }
+
+        .nav-social .instagram {
+            background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+        }
+
+        .nav-social .tiktok {
+            background: #000000;
+        }
+
+        .nav-social .twitter {
+            background: #1DA1F2;
+        }
+
+        .nav-social .social-icon:hover {
+            transform: translateY(-3px) scale(1.1);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         }
 
         /* Hero Carousel - WITH NEW IMAGES */
@@ -1131,17 +1107,6 @@
             }
         }
 
-        @keyframes slideInRight {
-            from {
-                opacity: 0;
-                transform: translateX(100px) translateY(-50%);
-            }
-            to {
-                opacity: 1;
-                transform: translateX(0) translateY(-50%);
-            }
-        }
-
         @keyframes float {
             0%, 100% {
                 transform: translateY(0) scale(1);
@@ -1203,26 +1168,21 @@
                 font-size: 0.7rem;
             }
 
-            /* Hide fixed social on small mobile */
-            .social-fixed {
-                right: -5px;
-                padding: 0.6rem 0.3rem;
+            /* Social Icons in Nav - Mobile */
+            .nav-social {
+                gap: 1rem;
+                padding: 0.8rem 0;
             }
 
-            .social-fixed a {
-                width: 38px;
-                height: 38px;
-                margin: 0.3rem 0;
-                font-size: 1.1rem;
-            }
-
-            .social-fixed a::before {
-                display: none;
+            .nav-social .social-icon {
+                width: 42px;
+                height: 42px;
+                font-size: 1.3rem;
             }
 
             /* Hero Mobile */
             .hero-carousel {
-                margin-top: 65px;
+                margin-top: 120px;
                 height: 70vh;
                 min-height: 400px;
             }
@@ -1436,22 +1396,6 @@
     </style>
 </head>
 <body>
-    <!-- Fixed Social Media Bar -->
-    <div class="social-fixed">
-        <a href="https://wa.me/2349081953680" class="whatsapp" target="_blank" data-label="WhatsApp" title="WhatsApp">
-            <i class="fab fa-whatsapp"></i>
-        </a>
-        <a href="https://www.instagram.com/mcjehdigital" class="instagram" target="_blank" data-label="Instagram" title="Instagram">
-            <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://www.tiktok.com/@mcjehdigital" class="tiktok" target="_blank" data-label="TikTok" title="TikTok">
-            <i class="fab fa-tiktok"></i>
-        </a>
-        <a href="https://x.com/McjehDigital" class="twitter" target="_blank" data-label="X (Twitter)" title="X">
-            <i class="fab fa-x-twitter"></i>
-        </a>
-    </div>
-
     <!-- Navigation -->
     <nav id="navbar">
         <div class="container">
@@ -1468,6 +1412,21 @@
                     <i class="fab fa-whatsapp"></i> <span>Contact</span>
                 </a></li>
             </ul>
+            <!-- Social Media Icons Under Contact -->
+            <div class="nav-social">
+                <a href="https://wa.me/2349081953680" class="social-icon whatsapp" target="_blank" title="WhatsApp">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+                <a href="https://www.instagram.com/mcjehdigital" class="social-icon instagram" target="_blank" title="Instagram">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://www.tiktok.com/@mcjehdigital" class="social-icon tiktok" target="_blank" title="TikTok">
+                    <i class="fab fa-tiktok"></i>
+                </a>
+                <a href="https://x.com/McjehDigital" class="social-icon twitter" target="_blank" title="X">
+                    <i class="fab fa-x-twitter"></i>
+                </a>
+            </div>
         </div>
     </nav>
 
@@ -2124,7 +2083,7 @@
                 <h4>Get in Touch</h4>
                 <ul>
                     <li><a href="https://wa.me/2349081953680"><i class="fab fa-whatsapp"></i> 09081953680</a></li>
-                    <li><a href="mailto:teammcjehdigital@gmail.com"><i class="fas fa-envelope"></i> teammcjehdigital@gmail.com</a></li>
+                    <li><a href="/cdn-cgi/l/email-protection#186c7d7975757b727d707c717f716c7974587f75797174367b7775"><i class="fas fa-envelope"></i> <span class="__cf_email__" data-cfemail="592d3c3834343a333c313d303e302d3835193e34383035773a3634">[email&#160;protected]</span></a></li>
                     <li><a href="#"><i class="fas fa-map-marker-alt"></i> Owerri, Imo State</a></li>
                     <li><a href="https://mcjehdigital.com"><i class="fas fa-globe"></i> www.mcjehdigital.com</a></li>
                 </ul>
@@ -2136,7 +2095,7 @@
         </div>
     </footer>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         // Hero Carousel Auto-Slide
         let currentSlideIndex = 0;
         const slides = document.querySelectorAll('.carousel-slide');
@@ -2277,12 +2236,4 @@
             ['brandit', 'magnet', 'convert', 'awakening', 'digital', 'teens'].forEach(initProgramSlider);
             
             // Auto-advance program sliders every 7 seconds
-            setInterval(() => {
-                ['brandit', 'magnet', 'convert', 'awakening', 'digital', 'teens'].forEach(id => {
-                    moveProgramSlider(id, 1);
-                });
-            }, 7000);
-        });
-    </script>
-</body>
-</html>
+   
