--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         nav .container {
             max-width: 1400px;
             margin: 0 auto;
-            padding: 1rem 1.5rem;
+            padding: 0.8rem 1.5rem;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -93,7 +93,7 @@
 
         nav ul {
             display: flex;
-            gap: 1.5rem;
+            gap: 1.8rem;
             list-style: none;
             align-items: center;
             flex-wrap: wrap;
@@ -113,44 +113,26 @@
             color: var(--primary-blue);
         }
 
-        .nav-cta {
-            padding: 0.6rem 1.2rem;
-            background: var(--primary-blue);
-            color: var(--white) !important;
-            transition: all 0.3s;
-            box-shadow: 0 4px 12px rgba(0, 82, 255, 0.25);
-            display: flex;
-            align-items: center;
-            gap: 0.4rem;
-            border-radius: 5px;
-        }
-
-        .nav-cta:hover {
-            background: var(--dark);
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-        }
-
-        /* Social Media Icons in Navigation */
+        /* Social Media Icons in Navigation - SMALLER & BETTER */
         .nav-social {
             display: flex;
-            gap: 0.8rem;
+            gap: 0.6rem;
             align-items: center;
             margin-top: 0.5rem;
             width: 100%;
             justify-content: center;
             padding: 0.5rem 0;
-            border-top: 1px solid var(--border);
+            border-top: 1px solid rgba(0, 82, 255, 0.1);
         }
 
         .nav-social .social-icon {
-            width: 38px;
-            height: 38px;
+            width: 32px;
+            height: 32px;
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 1.2rem;
+            font-size: 1rem;
             color: var(--white);
             transition: all 0.3s;
             text-decoration: none;
@@ -173,16 +155,17 @@
         }
 
         .nav-social .social-icon:hover {
-            transform: translateY(-3px) scale(1.1);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            transform: translateY(-2px) scale(1.08);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
         }
 
         /* Hero Carousel - WITH NEW IMAGES */
         .hero-carousel {
-            margin-top: 75px;
+            margin-top: 100px;
             position: relative;
-            height: 85vh;
-            min-height: 500px;
+            height: 80vh;
+            min-height: 450px;
+            max-height: 700px;
             overflow: hidden;
         }
 
@@ -201,7 +184,8 @@
             opacity: 0;
             transition: opacity 1.5s ease-in-out;
             background-size: cover;
-            background-position: center;
+            background-position: center center;
+            background-repeat: no-repeat;
         }
 
         .carousel-slide.active {
@@ -214,14 +198,14 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(135deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 82, 255, 0.5) 100%);
+            background: linear-gradient(135deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 82, 255, 0.4) 100%);
             display: flex;
             align-items: center;
             justify-content: center;
         }
 
         .carousel-content {
-            max-width: 1200px;
+            max-width: 1000px;
             padding: 2rem;
             text-align: center;
             color: var(--white);
@@ -229,18 +213,19 @@
         }
 
         .carousel-content h1 {
-            font-size: 3.5rem;
+            font-size: 3.2rem;
             font-weight: 900;
-            margin-bottom: 1.5rem;
-            text-shadow: 3px 3px 15px rgba(0,0,0,0.6);
-            line-height: 1.1;
+            margin-bottom: 1.2rem;
+            text-shadow: 3px 3px 15px rgba(0,0,0,0.7);
+            line-height: 1.2;
         }
 
         .carousel-content p {
-            font-size: 1.4rem;
+            font-size: 1.3rem;
             margin-bottom: 2rem;
             font-weight: 600;
-            text-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+            text-shadow: 2px 2px 10px rgba(0,0,0,0.6);
+            line-height: 1.6;
         }
 
         .carousel-controls {
@@ -1147,43 +1132,47 @@
         @media (max-width: 768px) {
             /* Navigation Mobile Fix */
             nav .container {
-                padding: 0.8rem 1rem;
+                padding: 0.6rem 1rem;
+                justify-content: center;
+            }
+
+            .logo-section {
+                width: 100%;
+                text-align: center;
+                margin-bottom: 0.5rem;
             }
 
             nav ul {
-                gap: 0.8rem;
+                gap: 1rem;
                 font-size: 0.7rem;
+                width: 100%;
+                justify-content: center;
             }
 
             .logo-section .logo {
-                font-size: 1.2rem;
+                font-size: 1.3rem;
             }
 
             .logo-section .tagline {
                 font-size: 0.5rem;
             }
 
-            .nav-cta {
-                padding: 0.5rem 1rem;
-                font-size: 0.7rem;
-            }
-
-            /* Social Icons in Nav - Mobile */
+            /* Social Icons in Nav - Mobile SMALLER */
             .nav-social {
-                gap: 1rem;
-                padding: 0.8rem 0;
+                gap: 0.8rem;
+                padding: 0.6rem 0;
             }
 
             .nav-social .social-icon {
-                width: 42px;
-                height: 42px;
-                font-size: 1.3rem;
+                width: 32px;
+                height: 32px;
+                font-size: 0.95rem;
             }
 
-            /* Hero Mobile */
+            /* Hero Mobile - CENTERED */
             .hero-carousel {
-                margin-top: 120px;
-                height: 70vh;
+                margin-top: 105px;
+                height: 65vh;
                 min-height: 400px;
             }
 
@@ -1351,7 +1340,22 @@
         }
 
         @media (max-width: 480px) {
-            /* Extra small mobile fixes */
+            /* Extra small mobile fixes - CENTERED */
+            .logo-section .logo {
+                font-size: 1.1rem;
+            }
+
+            nav ul {
+                gap: 0.7rem;
+                font-size: 0.65rem;
+            }
+
+            .nav-social .social-icon {
+                width: 30px;
+                height: 30px;
+                font-size: 0.9rem;
+            }
+
             .carousel-content h1 {
                 font-size: 1.6rem;
             }
@@ -1367,6 +1371,7 @@
 
             .stats-grid {
                 grid-template-columns: 1fr;
+                max-width: 300px;
             }
 
             .stat-number {
@@ -1408,11 +1413,8 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#programs">Programs</a></li>
                 <li><a href="#workshop">Workshop</a></li>
-                <li><a href="https://wa.me/2349081953680" class="nav-cta">
-                    <i class="fab fa-whatsapp"></i> <span>Contact</span>
-                </a></li>
             </ul>
-            <!-- Social Media Icons Under Contact -->
+            <!-- Social Media Icons -->
             <div class="nav-social">
                 <a href="https://wa.me/2349081953680" class="social-icon whatsapp" target="_blank" title="WhatsApp">
                     <i class="fab fa-whatsapp"></i>
